[package]
name = "tiny-pubsub"
version = "0.1.1"
edition = "2021"
description = "In-process publish/subscribe message bus with hierarchical topics and deferred or synchronous delivery."
license = "MIT"
repository = "https://github.com/hey-jj/tiny-pubsub"
readme = "README.md"
keywords = ["pubsub", "publish-subscribe", "event-bus", "messaging", "observer"]
categories = ["rust-patterns", "data-structures"]

[dependencies]
